--- a/page2.html
+++ b/page2.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reenu</title>
 </head>
 <body>
     <img style="width:100%;height:100vh;" src="gorilla.jpg" alt="Ad" onclick="nextwin()">
 </body>
+
 </html>
